k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
      - name: redis
        # default docker hub redis image
        image: redis
        ports:
        # redis default port
        - containerPort: 6379
        resources:
          limits:
            memory: "32Mi"
            cpu: "50m"
