k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  # NOTE: ClusterIP is default service type, so the below line is optional
  type: ClusterIP
  selector:
    component: web
  ports:
  # port that other pods will use to reach this set of containers
  - port: 3000
    # port that will be forwarded to these containers
    targetPort: 3000
