k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  # NOTE: ClusterIP is default service type, so the below line is optional
  type: ClusterIP
  selector:
    component: postgres
  ports:
  # default postgres port
  - port: 5432
    targetPort: 5432
