k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  # NOTE: ClusterIP is default service type, so the below line is optional
  type: ClusterIP
  selector:
    component: server
  ports:
  - port: 5000
    targetPort: 5000
